# observer

./: .gitignore  Cargo.toml  README.md  build.sh  config.toml  run.sh
observer/: Cargo.toml  build.rs
observer-common/: Cargo.toml
observer-common/src/: lib.rs
observer-ebpf/: Cargo.toml
observer-ebpf/src/: main.rs
observer/src/: logger.rs  main.rs
test/: curl-script.sh
