[package]
name = "observer-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
observer-common = { path = "../observer-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "observer"
path = "src/main.rs"
