[package]
name = "observer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = "0.12", features = ["async_tokio"] }
observer-common = { path = "../observer-common", features = ["user"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
bytes = "1"
libc = "0.2"

# 新增这一块！
[build-dependencies]
anyhow = "1"
aya-build = "0.1"
cargo_metadata = "0.15"